them modules phan he thong ke gio day <statistic>

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
             "Modules\\": [
                 "modules/ManageCategory/",
                 "modules/User/",
-                "modules/Base/"
+                "modules/Base/",
+                "modules/Statistic/"
             ]
         },
         "files": [
