update lai project. them nhap lieu du lieu. sua loi nhieu. con fix them

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
                 "modules/ManageCategory/",
                 "modules/User/",
                 "modules/Base/",
-                "modules/Statistic/"
+                "modules/Statistic/",
+                "modules/Data/"
             ]
         },
         "files": [
